--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
         <span>Leafie</span>
       </div>
       <nav>
-        <a href="login" class="btn-login">Login</a>
+        <a href="login">Login</a>
       </nav>
     </div>
   </header>
