--- a/templates/home.html
+++ b/templates/home.html
@@ -93,6 +93,10 @@
           <h3>ESP32</h3>
           <p>Mikrokontroler utama yang menghubungkan seluruh sensor ke platform Leafie secara real-time.</p>
         </div>
+        <div class="card">
+          <h3>ESP32-CAM</h3>
+          <p>Modul kamera yang digunakan untuk memantau kondisi tanaman melalui gambar dan vidio secara real-time.</p>
+        </div>
       </div>
     </div>
   </section>
