--- a/static/css/landingPage.css
+++ b/static/css/landingPage.css
@@ -188,7 +188,7 @@ body {
 .sensors .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 25px;
+  gap: 1.5rem;
 }
 
 .sensors .card {
