--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -99,7 +99,7 @@
       <div class="grid-2">
         <div class="card camera-card">
           <img id="cameraFeed"
-               src="{{ esp32_stream_url }}"
+               src="http://192.168.74.253:81/stream"
                alt="Live Camera"
                class="camera-frame"
                onerror="this.src='/static/image/default_leaf.jpg'">
