--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -234,6 +234,9 @@ canvas {
   font-size: 0.95rem;
   cursor: pointer;
   transition: 0.2s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn:hover {
@@ -286,15 +289,16 @@ canvas {
 
 .leaf-img {
   width: 100%;
-  max-height: 220px;
+  height: 300px;
   margin-top: 12px;
+  aspect-ratio: 1/1;
   border-radius: 12px;
   object-fit: cover;
 }
 
-@media (min-width: 900px) {
-  .leaf-result .grid-2 {
-    grid-template-columns: 1fr 1fr;
+@media (max-width: 480px) {
+  .leaf-img {
+    height: 280px;
   }
 }
 
